--- a/content/processed/cursor-metabase-push-list-management.html
+++ b/content/processed/cursor-metabase-push-list-management.html
@@ -9,11 +9,13 @@
 </ol>
 <p>這個流程看似合理，但在實際運作中卻有一個常見的問題：<strong>行銷人員的需求經常變動</strong>。</p>
 <p>今天要「最近 30 天有購買的用戶」，明天改成「最近 14 天有購買且金額超過 1000 的用戶」，後天又變成「最近 7 天有購買但沒有退貨的用戶」。</p>
-<p>數據人員每次都要：<br />
-- 理解行銷人員的需求<br />
-- 在 Metabase 中建立或修改查詢<br />
-- 驗證結果是否正確<br />
-- 處理各種邊緣情況</p>
+<p>數據人員每次都要：</p>
+<ul>
+<li>理解行銷人員的需求</li>
+<li>在 Metabase 中建立或修改查詢</li>
+<li>驗證結果是否正確</li>
+<li>處理各種邊緣情況</li>
+</ul>
 <p><strong>結果就是：數據人員被行銷人員的「改來改去」搞得疲於奔命。</strong></p>
 <h2>傳統解決方案的兩難</h2>
 <p>當數據人員提出「能不能寫一個介面讓行銷人員自己調整」時，技術端面臨一個經典的兩難：</p>
@@ -40,7 +42,7 @@
 <li><strong>權限完全掌控</strong>：API KEY 由技術端管理，行銷人員無法直接存取</li>
 </ol>
 <h3>技術架構</h3>
-<div class="codehilite"><pre><span></span><code>行銷人員
+<pre><code>行銷人員
   ↓ (自然語言)
 Cursor Agent
   ↓ (理解需求，生成查詢)
@@ -49,67 +51,75 @@ Metabase MCP Server
 Metabase
   ↓ (執行查詢，產出名單)
 推送系統
-</code></pre></div>
-
+</code></pre>
 <h2>Metabase MCP Server 配置</h2>
 <p>首先，我們需要在 Cursor 中配置 Metabase MCP Server。這個方案使用的是 <a href="https://github.com/easecloudio/mcp-metabase-server" target="_blank" rel="noopener noreferrer">@easecloudio/mcp-metabase-server</a>，一個提供 70+ 工具的 Metabase MCP Server。</p>
 <p>在 <code>mcp.json</code> 中加入以下配置：</p>
-<div class="codehilite"><pre><span></span><code><span class="p">{</span>
-<span class="w">  </span><span class="nt">&quot;mcpServers&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
-<span class="w">    </span><span class="nt">&quot;metabase-server&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
-<span class="w">      </span><span class="nt">&quot;command&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;npx&quot;</span><span class="p">,</span>
-<span class="w">      </span><span class="nt">&quot;args&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="s2">&quot;@easecloudio/mcp-metabase-server&quot;</span><span class="p">],</span>
-<span class="w">      </span><span class="nt">&quot;env&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span>
-<span class="w">        </span><span class="nt">&quot;METABASE_URL&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;http://your-metabase-url:3000/&quot;</span><span class="p">,</span>
-<span class="w">        </span><span class="nt">&quot;METABASE_API_KEY&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;your-api-key-here&quot;</span>
-<span class="w">      </span><span class="p">}</span>
-<span class="w">    </span><span class="p">}</span>
-<span class="w">  </span><span class="p">}</span>
-<span class="p">}</span>
-</code></pre></div>
-
-<p><strong>關鍵點</strong>：<br />
-- <code>METABASE_URL</code>：你的 Metabase 實例地址<br />
-- <code>METABASE_API_KEY</code>：由技術端管理的 API KEY<br />
-- 行銷人員無法直接看到或修改這些配置</p>
+<pre><code class="language-json">{
+  &quot;mcpServers&quot;: {
+    &quot;metabase-server&quot;: {
+      &quot;command&quot;: &quot;npx&quot;,
+      &quot;args&quot;: [&quot;@easecloudio/mcp-metabase-server&quot;],
+      &quot;env&quot;: {
+        &quot;METABASE_URL&quot;: &quot;http://your-metabase-url:3000/&quot;,
+        &quot;METABASE_API_KEY&quot;: &quot;your-api-key-here&quot;
+      }
+    }
+  }
+}
+</code></pre>
+<p><strong>關鍵點</strong>：</p>
+<ul>
+<li><code>METABASE_URL</code>：你的 Metabase 實例地址</li>
+<li><code>METABASE_API_KEY</code>：由技術端管理的 API KEY</li>
+<li>行銷人員無法直接看到或修改這些配置</li>
+</ul>
 <h2>實際使用場景</h2>
 <h3>場景 1：建立新的推送名單</h3>
 <p><strong>行銷人員輸入</strong>：</p>
 <blockquote>
 <p>「幫我建立一個名單，包含最近 30 天有購買行為，且購買金額超過 1000 元的用戶，最多 5000 人」</p>
 </blockquote>
-<p><strong>Cursor Agent 執行</strong>：<br />
-1. 理解需求：時間範圍（30 天）、條件（購買金額 &gt; 1000）、限制（最多 5000 人）<br />
-2. 透過 Metabase MCP 查詢相關表結構<br />
-3. 建立 Metabase 查詢（Card）<br />
-4. 執行查詢並產出名單<br />
-5. 將名單保存到 Metabase 的指定表</p>
-<p><strong>結果</strong>：<br />
-- 行銷人員用自然語言就完成了複雜的查詢建立<br />
-- 數據人員不需要介入<br />
-- API KEY 權限完全由技術端掌控</p>
+<p><strong>Cursor Agent 執行</strong>：</p>
+<ol>
+<li>理解需求：時間範圍（30 天）、條件（購買金額 &gt; 1000）、限制（最多 5000 人）</li>
+<li>透過 Metabase MCP 查詢相關表結構</li>
+<li>建立 Metabase 查詢（Card）</li>
+<li>執行查詢並產出名單</li>
+<li>將名單保存到 Metabase 的指定表</li>
+</ol>
+<p><strong>結果</strong>：</p>
+<ul>
+<li>行銷人員用自然語言就完成了複雜的查詢建立</li>
+<li>數據人員不需要介入</li>
+<li>API KEY 權限完全由技術端掌控</li>
+</ul>
 <h3>場景 2：修改現有名單</h3>
 <p><strong>行銷人員輸入</strong>：</p>
 <blockquote>
 <p>「把昨天的推送名單改成最近 14 天，其他條件不變」</p>
 </blockquote>
-<p><strong>Cursor Agent 執行</strong>：<br />
-1. 找到昨天的推送名單（透過 Metabase MCP 查詢）<br />
-2. 理解「其他條件不變」的語義<br />
-3. 修改查詢中的時間範圍<br />
-4. 更新 Metabase 中的查詢<br />
-5. 重新執行並產出新的名單</p>
+<p><strong>Cursor Agent 執行</strong>：</p>
+<ol>
+<li>找到昨天的推送名單（透過 Metabase MCP 查詢）</li>
+<li>理解「其他條件不變」的語義</li>
+<li>修改查詢中的時間範圍</li>
+<li>更新 Metabase 中的查詢</li>
+<li>重新執行並產出新的名單</li>
+</ol>
 <h3>場景 3：複雜的多條件查詢</h3>
 <p><strong>行銷人員輸入</strong>：</p>
 <blockquote>
 <p>「我要最近 7 天有購買，但沒有退貨記錄，且不在黑名單中的用戶，按購買金額降序排列，取前 3000 名」</p>
 </blockquote>
-<p><strong>Cursor Agent 執行</strong>：<br />
-1. 解析多個條件：時間、購買行為、退貨排除、黑名單排除、排序、限制<br />
-2. 透過 Metabase MCP 查詢相關表的關聯關係<br />
-3. 建立複雜的 JOIN 查詢<br />
-4. 執行並驗證結果<br />
-5. 產出名單並保存</p>
+<p><strong>Cursor Agent 執行</strong>：</p>
+<ol>
+<li>解析多個條件：時間、購買行為、退貨排除、黑名單排除、排序、限制</li>
+<li>透過 Metabase MCP 查詢相關表的關聯關係</li>
+<li>建立複雜的 JOIN 查詢</li>
+<li>執行並驗證結果</li>
+<li>產出名單並保存</li>
+</ol>
 <h2>優勢分析</h2>
 <h3>1. 解決彈性與易用性的矛盾</h3>
 <ul>
@@ -215,5 +225,5 @@ Metabase
 <li>✅ <strong>釋放數據人員時間</strong>：專注高價值工作</li>
 </ul>
 <p>這個方案不僅解決了當下的痛點，更重要的是展示了 <strong>AI Agent 在實際業務場景中的應用價值</strong>。透過合理的架構設計，我們可以在保持安全性的同時，大幅提升業務效率。</p>
-<hr />
+<hr>
 <p><em>這篇文章記錄了使用 Cursor Agent 配合 Metabase MCP 解決實際業務問題的經驗，希望對面臨類似挑戰的團隊有所幫助。</em></p>
