--- a/content/processed/multi-ai-agent-frameworks-comparison.en.html
+++ b/content/processed/multi-ai-agent-frameworks-comparison.en.html
@@ -23,10 +23,12 @@
 <li><strong>Modular Design</strong>: Provides modular, extensible toolkits, making it easy for developers to quickly build complex AI systems</li>
 </ul>
 <h3>Technical Architecture</h3>
-<p>AutoGen adopts a conversational collaboration model where agents communicate through a virtual conversational space. This design enables agents to:<br />
-- Conduct multi-party dialogues (text, audio, or video formats)<br />
-- Dynamically adjust collaboration strategies<br />
-- Flexibly combine different types of agents according to task requirements</p>
+<p>AutoGen adopts a conversational collaboration model where agents communicate through a virtual conversational space. This design enables agents to:</p>
+<ul>
+<li>Conduct multi-party dialogues (text, audio, or video formats)</li>
+<li>Dynamically adjust collaboration strategies</li>
+<li>Flexibly combine different types of agents according to task requirements</li>
+</ul>
 <h3>Use Cases</h3>
 <ul>
 <li>Scenarios requiring multi-party dialogue and collaboration</li>
@@ -37,7 +39,7 @@
 <h3>References</h3>
 <ul>
 <li><a href="https://cloud.baidu.com/article/2740027" target="_blank" rel="noopener noreferrer">Introduction to Multi-Agent Dialogue Framework AutoGen</a></li>
-<li><a href="https://www.youtube.com/watch?v=buuPOpHNOX0" target="_blank" rel="noopener noreferrer">AutoGen: Microsoft's LLM Development Framework for Building Complex Agents with Multiple Agents</a></li>
+<li><a href="https://www.youtube.com/watch?v=buuPOpHNOX0" target="_blank" rel="noopener noreferrer">AutoGen: Microsoft&#39;s LLM Development Framework for Building Complex Agents with Multiple Agents</a></li>
 <li><a href="https://www.53ai.com/news/OpenSourceLLM/2025040175268.html" target="_blank" rel="noopener noreferrer">Agent Framework Showdown: Who Will Lead the Future of Intelligent Applications?</a></li>
 </ul>
 <h2>2. LangGraph (Based on LangChain)</h2>
@@ -52,11 +54,13 @@
 <li><strong>Persistence</strong>: Provides persistent state management, facilitating stateful behavior implementation</li>
 </ul>
 <h3>Technical Architecture</h3>
-<p>LangGraph adopts a graph architecture pattern, managing agent workflows through node and edge definitions. This design enables:<br />
-- Building complex dynamic workflows<br />
-- Supporting cycle and conditional branch logic<br />
-- Seamless integration with LangChain and LangSmith<br />
-- Active community support</p>
+<p>LangGraph adopts a graph architecture pattern, managing agent workflows through node and edge definitions. This design enables:</p>
+<ul>
+<li>Building complex dynamic workflows</li>
+<li>Supporting cycle and conditional branch logic</li>
+<li>Seamless integration with LangChain and LangSmith</li>
+<li>Active community support</li>
+</ul>
 <h3>Use Cases</h3>
 <ul>
 <li>Multi-agent orchestration applications requiring high customization</li>
@@ -73,20 +77,22 @@
 </ul>
 <h2>3. CrewAI</h2>
 <h3>Framework Introduction</h3>
-<p>CrewAI is a multi-agent collaboration framework that supports task allocation and role management. The framework particularly emphasizes high-performance team collaboration and features a unique "role hibernation" mechanism to optimize resource usage.</p>
+<p>CrewAI is a multi-agent collaboration framework that supports task allocation and role management. The framework particularly emphasizes high-performance team collaboration and features a unique &quot;role hibernation&quot; mechanism to optimize resource usage.</p>
 <h3>Core Features</h3>
 <ul>
 <li><strong>Task Allocation</strong>: Supports efficient task allocation and collaboration mechanisms</li>
 <li><strong>Role Management</strong>: Provides flexible role management functionality</li>
-<li><strong>Role Hibernation Mechanism</strong>: Features a "role hibernation" mechanism that can save approximately 37% of memory</li>
+<li><strong>Role Hibernation Mechanism</strong>: Features a &quot;role hibernation&quot; mechanism that can save approximately 37% of memory</li>
 <li><strong>Ease of Use</strong>: Intuitive and easy to set up, primarily relying on prompt engineering</li>
 <li><strong>Rapid Prototyping</strong>: Non-technical users can quickly get started, suitable for rapid prototyping</li>
 </ul>
 <h3>Technical Architecture</h3>
-<p>CrewAI adopts a task allocation collaboration model, organizing multi-agent collaboration through clear task allocation and role definitions. This design enables:<br />
-- Agents to collaborate efficiently according to task requirements<br />
-- The system to automatically manage agent lifecycles<br />
-- Optimized resource usage, improving system performance</p>
+<p>CrewAI adopts a task allocation collaboration model, organizing multi-agent collaboration through clear task allocation and role definitions. This design enables:</p>
+<ul>
+<li>Agents to collaborate efficiently according to task requirements</li>
+<li>The system to automatically manage agent lifecycles</li>
+<li>Optimized resource usage, improving system performance</li>
+</ul>
 <h3>Use Cases</h3>
 <ul>
 <li>Team tasks requiring high-performance collaboration</li>
@@ -112,10 +118,12 @@
 <li><strong>Flexible Deployment</strong>: Supports flexible deployment options to meet different needs</li>
 </ul>
 <h3>Technical Architecture</h3>
-<p>AgentMesh adopts a layered architecture pattern:<br />
-- <strong>Model Layer</strong>: Supports integration of mainstream commercial models<br />
-- <strong>Framework Layer</strong>: Provides core multi-agent capabilities, including tools, memory, knowledge, models required by agents, and team modules responsible for multi-agent interaction<br />
-- <strong>Application Layer</strong>: Supports command-line execution, Web interface execution, integration into self-developed applications through SDK or API, and integration with common communication and office software</p>
+<p>AgentMesh adopts a layered architecture pattern:</p>
+<ul>
+<li><strong>Model Layer</strong>: Supports integration of mainstream commercial models</li>
+<li><strong>Framework Layer</strong>: Provides core multi-agent capabilities, including tools, memory, knowledge, models required by agents, and team modules responsible for multi-agent interaction</li>
+<li><strong>Application Layer</strong>: Supports command-line execution, Web interface execution, integration into self-developed applications through SDK or API, and integration with common communication and office software</li>
+</ul>
 <h3>Use Cases</h3>
 <ul>
 <li>Scenarios requiring integration into existing applications</li>
@@ -140,11 +148,13 @@
 <li><strong>Autonomous Agent Operating System</strong>: Contains agent system utilities, LLM-driven actionable engines, self-managed file systems, and self-practicing agent customization modules</li>
 </ul>
 <h3>Technical Architecture</h3>
-<p>AutoAgent adopts a zero-code architecture, generating and configuring agent systems through natural language understanding. Core components include:<br />
-- <strong>Agent System Utilities</strong>: Provides basic functionality for agent management<br />
-- <strong>LLM-Driven Actionable Engine</strong>: Responsible for understanding and executing natural language instructions<br />
-- <strong>Self-Managed File System</strong>: Automatically manages agent-related files and configurations<br />
-- <strong>Self-Practicing Agent Customization Module</strong>: Automatically optimizes and adjusts agent configurations</p>
+<p>AutoAgent adopts a zero-code architecture, generating and configuring agent systems through natural language understanding. Core components include:</p>
+<ul>
+<li><strong>Agent System Utilities</strong>: Provides basic functionality for agent management</li>
+<li><strong>LLM-Driven Actionable Engine</strong>: Responsible for understanding and executing natural language instructions</li>
+<li><strong>Self-Managed File System</strong>: Automatically manages agent-related files and configurations</li>
+<li><strong>Self-Practicing Agent Customization Module</strong>: Automatically optimizes and adjusts agent configurations</li>
+</ul>
 <h3>Use Cases</h3>
 <ul>
 <li>Rapid prototyping</li>
@@ -160,7 +170,7 @@
 </ul>
 <h2>6. InfiAgent</h2>
 <h3>Framework Introduction</h3>
-<p>InfiAgent is a self-evolving pyramid agent framework designed to handle infinite scenarios. The framework introduces an "agent-as-tool" mechanism that automatically decomposes complex agents into hierarchical multi-agent systems.</p>
+<p>InfiAgent is a self-evolving pyramid agent framework designed to handle infinite scenarios. The framework introduces an &quot;agent-as-tool&quot; mechanism that automatically decomposes complex agents into hierarchical multi-agent systems.</p>
 <h3>Core Features</h3>
 <ul>
 <li><strong>Self-Evolution</strong>: Supports agent self-evolution mechanisms, automatically reconstructing agent DAGs based on new tasks, poor performance, or optimization opportunities</li>
@@ -170,11 +180,13 @@
 <li><strong>Agent Routing</strong>: Achieves efficient task-agent matching</li>
 </ul>
 <h3>Technical Architecture</h3>
-<p>InfiAgent adopts a pyramid architecture pattern, processing complex tasks through hierarchical agent systems:<br />
-- <strong>Agent-as-Tool</strong>: Automatically decomposes complex agents into hierarchical multi-agent systems<br />
-- <strong>Dual Review</strong>: Ensures quality and stability of task completion<br />
-- <strong>Agent Routing</strong>: Achieves efficient task-agent matching<br />
-- <strong>Self-Evolution</strong>: Automatically reconstructs agent DAGs based on new tasks, poor performance, or optimization opportunities</p>
+<p>InfiAgent adopts a pyramid architecture pattern, processing complex tasks through hierarchical agent systems:</p>
+<ul>
+<li><strong>Agent-as-Tool</strong>: Automatically decomposes complex agents into hierarchical multi-agent systems</li>
+<li><strong>Dual Review</strong>: Ensures quality and stability of task completion</li>
+<li><strong>Agent Routing</strong>: Achieves efficient task-agent matching</li>
+<li><strong>Self-Evolution</strong>: Automatically reconstructs agent DAGs based on new tasks, poor performance, or optimization opportunities</li>
+</ul>
 <h3>Use Cases</h3>
 <ul>
 <li>Complex tasks requiring handling of infinite scenarios</li>
@@ -190,7 +202,7 @@
 </ul>
 <h2>7. MAS²</h2>
 <h3>Framework Introduction</h3>
-<p>MAS² is a self-generating, self-configuring, self-correcting multi-agent system. The framework adopts a "generator-executor-corrector" three-agent team that can dynamically combine and adaptively correct target agent systems according to real-time task requirements.</p>
+<p>MAS² is a self-generating, self-configuring, self-correcting multi-agent system. The framework adopts a &quot;generator-executor-corrector&quot; three-agent team that can dynamically combine and adaptively correct target agent systems according to real-time task requirements.</p>
 <h3>Core Features</h3>
 <ul>
 <li><strong>Self-Generating</strong>: Can automatically generate agent systems according to task requirements</li>
@@ -200,10 +212,12 @@
 <li><strong>Highly Automated</strong>: Reduces human intervention, provides highly automated agent management and configuration capabilities</li>
 </ul>
 <h3>Technical Architecture</h3>
-<p>MAS² adopts a "generator-executor-corrector" three-agent team architecture:<br />
-- <strong>Generator</strong>: Responsible for generating agent systems according to task requirements<br />
-- <strong>Executor</strong>: Responsible for executing tasks<br />
-- <strong>Corrector</strong>: Responsible for correction and optimization based on execution results</p>
+<p>MAS² adopts a &quot;generator-executor-corrector&quot; three-agent team architecture:</p>
+<ul>
+<li><strong>Generator</strong>: Responsible for generating agent systems according to task requirements</li>
+<li><strong>Executor</strong>: Responsible for executing tasks</li>
+<li><strong>Corrector</strong>: Responsible for correction and optimization based on execution results</li>
+</ul>
 <p>Through collaborative tree optimization training and specialization of these meta-agents, MAS² performs excellently in complex scenarios such as deep research and code generation.</p>
 <h3>Use Cases</h3>
 <ul>
@@ -267,16 +281,20 @@
 </ul>
 <h3>Classification by Development Method</h3>
 <h4>1. Code-Based Frameworks</h4>
-<p>Require code configuration:<br />
-- <strong>AutoGen</strong><br />
-- <strong>LangGraph</strong><br />
-- <strong>CrewAI</strong><br />
-- <strong>AgentMesh</strong><br />
-- <strong>InfiAgent</strong><br />
-- <strong>MAS²</strong></p>
+<p>Require code configuration:</p>
+<ul>
+<li><strong>AutoGen</strong></li>
+<li><strong>LangGraph</strong></li>
+<li><strong>CrewAI</strong></li>
+<li><strong>AgentMesh</strong></li>
+<li><strong>InfiAgent</strong></li>
+<li><strong>MAS²</strong></li>
+</ul>
 <h4>2. Zero-Code Frameworks</h4>
-<p>Require only natural language:<br />
-- <strong>AutoAgent</strong></p>
+<p>Require only natural language:</p>
+<ul>
+<li><strong>AutoAgent</strong></li>
+</ul>
 <h2>Comprehensive Comparison Table</h2>
 <table>
 <thead>
@@ -289,8 +307,7 @@
 <th>Use Cases</th>
 </tr>
 </thead>
-<tbody>
-<tr>
+<tbody><tr>
 <td>AutoGen</td>
 <td>Code</td>
 <td>Conversational</td>
@@ -346,64 +363,85 @@
 <td>High</td>
 <td>Deep research, code generation</td>
 </tr>
-</tbody>
-</table>
+</tbody></table>
 <h2>Selection Recommendations</h2>
 <h3>Selection Based on Requirements</h3>
 <h4>Need High Customization</h4>
-<p><strong>Recommendation: LangGraph</strong><br />
-- Provides maximum flexibility and customization capabilities<br />
-- Supports complex dynamic workflows<br />
-- Suitable for teams with rich development experience</p>
+<p><strong>Recommendation: LangGraph</strong></p>
+<ul>
+<li>Provides maximum flexibility and customization capabilities</li>
+<li>Supports complex dynamic workflows</li>
+<li>Suitable for teams with rich development experience</li>
+</ul>
 <h4>Need Rapid Prototyping</h4>
-<p><strong>Recommendation: AutoAgent or CrewAI</strong><br />
-- AutoAgent: Zero-code, usable by non-technical personnel<br />
-- CrewAI: Intuitive and easy to use, primarily relies on prompt engineering</p>
+<p><strong>Recommendation: AutoAgent or CrewAI</strong></p>
+<ul>
+<li>AutoAgent: Zero-code, usable by non-technical personnel</li>
+<li>CrewAI: Intuitive and easy to use, primarily relies on prompt engineering</li>
+</ul>
 <h4>Need Integration with Existing Systems</h4>
-<p><strong>Recommendation: AgentMesh</strong><br />
-- Supports multiple runtime modes (CLI, Web, SDK, API)<br />
-- Easy to integrate into existing applications<br />
-- Layered architecture facilitates expansion</p>
+<p><strong>Recommendation: AgentMesh</strong></p>
+<ul>
+<li>Supports multiple runtime modes (CLI, Web, SDK, API)</li>
+<li>Easy to integrate into existing applications</li>
+<li>Layered architecture facilitates expansion</li>
+</ul>
 <h4>Need to Handle Complex Tasks</h4>
-<p><strong>Recommendation: InfiAgent or MAS²</strong><br />
-- InfiAgent: Strong self-evolution capability, suitable for handling infinite scenarios<br />
-- MAS²: Strong adaptive capability, suitable for deep research and code generation</p>
+<p><strong>Recommendation: InfiAgent or MAS²</strong></p>
+<ul>
+<li>InfiAgent: Strong self-evolution capability, suitable for handling infinite scenarios</li>
+<li>MAS²: Strong adaptive capability, suitable for deep research and code generation</li>
+</ul>
 <h4>Need Multi-Party Dialogue</h4>
-<p><strong>Recommendation: AutoGen</strong><br />
-- Specifically designed for conversational collaboration<br />
-- Supports multi-party dialogue and collaboration<br />
-- Flexible agent definition</p>
+<p><strong>Recommendation: AutoGen</strong></p>
+<ul>
+<li>Specifically designed for conversational collaboration</li>
+<li>Supports multi-party dialogue and collaboration</li>
+<li>Flexible agent definition</li>
+</ul>
 <h3>Selection Based on Technical Background</h3>
 <h4>Non-Technical Personnel</h4>
-<p><strong>Recommendation: AutoAgent</strong><br />
-- Zero-code framework<br />
-- Requires only natural language<br />
-- Quick to get started</p>
+<p><strong>Recommendation: AutoAgent</strong></p>
+<ul>
+<li>Zero-code framework</li>
+<li>Requires only natural language</li>
+<li>Quick to get started</li>
+</ul>
 <h4>Junior Developers</h4>
-<p><strong>Recommendation: CrewAI</strong><br />
-- Intuitive and easy to use<br />
-- Primarily relies on prompt engineering<br />
-- Gentle learning curve</p>
+<p><strong>Recommendation: CrewAI</strong></p>
+<ul>
+<li>Intuitive and easy to use</li>
+<li>Primarily relies on prompt engineering</li>
+<li>Gentle learning curve</li>
+</ul>
 <h4>Intermediate Developers</h4>
-<p><strong>Recommendation: AutoGen or AgentMesh</strong><br />
-- Provides good documentation and community support<br />
-- Balances functionality and ease of use</p>
+<p><strong>Recommendation: AutoGen or AgentMesh</strong></p>
+<ul>
+<li>Provides good documentation and community support</li>
+<li>Balances functionality and ease of use</li>
+</ul>
 <h4>Senior Developers</h4>
-<p><strong>Recommendation: LangGraph, InfiAgent, or MAS²</strong><br />
-- Provides maximum flexibility and customization capabilities<br />
-- Suitable for building complex enterprise-level applications</p>
+<p><strong>Recommendation: LangGraph, InfiAgent, or MAS²</strong></p>
+<ul>
+<li>Provides maximum flexibility and customization capabilities</li>
+<li>Suitable for building complex enterprise-level applications</li>
+</ul>
 <h2>Conclusion</h2>
-<p>Choosing the right multi-agent framework requires comprehensive consideration of multiple factors, including:<br />
-- <strong>Application Scenarios</strong>: Different scenarios require different architecture patterns<br />
-- <strong>Technical Background</strong>: Team's technical level affects framework selection<br />
-- <strong>Development Resources</strong>: Investment of time and human resources<br />
-- <strong>Expansion Needs</strong>: Whether expansion and maintenance are needed in the future</p>
-<p>No single framework can be suitable for all scenarios. The key is to make the best choice based on actual needs. When selecting a framework, it is recommended to:<br />
-1. Clarify application scenarios and requirements<br />
-2. Assess the team's technical background<br />
-3. Refer to official documentation and community resources<br />
-4. Conduct small-scale POC (Proof of Concept)<br />
-5. Adjust based on actual usage</p>
+<p>Choosing the right multi-agent framework requires comprehensive consideration of multiple factors, including:</p>
+<ul>
+<li><strong>Application Scenarios</strong>: Different scenarios require different architecture patterns</li>
+<li><strong>Technical Background</strong>: Team&#39;s technical level affects framework selection</li>
+<li><strong>Development Resources</strong>: Investment of time and human resources</li>
+<li><strong>Expansion Needs</strong>: Whether expansion and maintenance are needed in the future</li>
+</ul>
+<p>No single framework can be suitable for all scenarios. The key is to make the best choice based on actual needs. When selecting a framework, it is recommended to:</p>
+<ol>
+<li>Clarify application scenarios and requirements</li>
+<li>Assess the team&#39;s technical background</li>
+<li>Refer to official documentation and community resources</li>
+<li>Conduct small-scale POC (Proof of Concept)</li>
+<li>Adjust based on actual usage</li>
+</ol>
 <p>We hope this article can help developers better understand the characteristics and applicable scenarios of various multi-agent frameworks and make informed choices.</p>
 <h2>Complete Reference List</h2>
 <h3>Official Documentation and Resources</h3>
