--- a/content/processed/multi-ai-agent-frameworks-comparison.html
+++ b/content/processed/multi-ai-agent-frameworks-comparison.html
@@ -23,10 +23,12 @@
 <li><strong>模組化設計</strong>：提供模組化、可擴展的工具集，便於開發者快速構建複雜的 AI 系統</li>
 </ul>
 <h3>技術架構</h3>
-<p>AutoGen 採用對話式協作模式，代理之間通過虛擬對話空間進行溝通。這種設計使得代理可以：<br />
-- 進行多方對話（文本、音訊或視訊形式）<br />
-- 動態調整協作策略<br />
-- 根據任務需求靈活組合不同類型的代理</p>
+<p>AutoGen 採用對話式協作模式，代理之間通過虛擬對話空間進行溝通。這種設計使得代理可以：</p>
+<ul>
+<li>進行多方對話（文本、音訊或視訊形式）</li>
+<li>動態調整協作策略</li>
+<li>根據任務需求靈活組合不同類型的代理</li>
+</ul>
 <h3>適用場景</h3>
 <ul>
 <li>需要多方對話和協作的場景</li>
@@ -52,11 +54,13 @@
 <li><strong>持久化</strong>：提供持久化狀態管理，便於實現有狀態行為</li>
 </ul>
 <h3>技術架構</h3>
-<p>LangGraph 採用圖形架構模式，通過節點和邊的定義來管理代理流程。這種設計使得：<br />
-- 可以構建複雜的動態工作流<br />
-- 支持循環和條件分支邏輯<br />
-- 與 LangChain 和 LangSmith 無縫集成<br />
-- 享有活躍的社區支持</p>
+<p>LangGraph 採用圖形架構模式，通過節點和邊的定義來管理代理流程。這種設計使得：</p>
+<ul>
+<li>可以構建複雜的動態工作流</li>
+<li>支持循環和條件分支邏輯</li>
+<li>與 LangChain 和 LangSmith 無縫集成</li>
+<li>享有活躍的社區支持</li>
+</ul>
 <h3>適用場景</h3>
 <ul>
 <li>需要高度定制化的多智能體編排應用</li>
@@ -83,10 +87,12 @@
 <li><strong>快速原型</strong>：非技術用戶也能快速上手，適合快速原型開發</li>
 </ul>
 <h3>技術架構</h3>
-<p>CrewAI 採用任務分配式協作模式，通過明確的任務分配和角色定義來組織多代理協作。這種設計使得：<br />
-- 代理可以根據任務需求進行高效協作<br />
-- 系統可以自動管理代理的生命週期<br />
-- 資源使用得到優化，提高系統性能</p>
+<p>CrewAI 採用任務分配式協作模式，通過明確的任務分配和角色定義來組織多代理協作。這種設計使得：</p>
+<ul>
+<li>代理可以根據任務需求進行高效協作</li>
+<li>系統可以自動管理代理的生命週期</li>
+<li>資源使用得到優化，提高系統性能</li>
+</ul>
 <h3>適用場景</h3>
 <ul>
 <li>需要高效能協作的團隊任務</li>
@@ -112,10 +118,12 @@
 <li><strong>靈活部署</strong>：支持靈活的部署選項，滿足不同需求</li>
 </ul>
 <h3>技術架構</h3>
-<p>AgentMesh 採用分層架構模式：<br />
-- <strong>模型層</strong>：支持主流商用模型的接入<br />
-- <strong>框架層</strong>：提供多智能體核心能力，包括代理所需的工具、記憶、知識、模型，以及負責多代理交互的團隊模組<br />
-- <strong>應用層</strong>：支持命令行運行、Web 界面運行、通過 SDK 或 API 集成到自研應用中，並提供常用通訊和辦公軟體的集成</p>
+<p>AgentMesh 採用分層架構模式：</p>
+<ul>
+<li><strong>模型層</strong>：支持主流商用模型的接入</li>
+<li><strong>框架層</strong>：提供多智能體核心能力，包括代理所需的工具、記憶、知識、模型，以及負責多代理交互的團隊模組</li>
+<li><strong>應用層</strong>：支持命令行運行、Web 界面運行、通過 SDK 或 API 集成到自研應用中，並提供常用通訊和辦公軟體的集成</li>
+</ul>
 <h3>適用場景</h3>
 <ul>
 <li>需要整合到現有應用的場景</li>
@@ -140,11 +148,13 @@
 <li><strong>自主代理操作系統</strong>：包含代理系統實用程序、LLM 驅動的可操作引擎、自我管理的文件系統和自我演練的代理定制模組</li>
 </ul>
 <h3>技術架構</h3>
-<p>AutoAgent 採用零代碼架構，通過自然語言理解來生成和配置代理系統。核心組件包括：<br />
-- <strong>代理系統實用程序</strong>：提供代理管理的基本功能<br />
-- <strong>LLM 驅動的可操作引擎</strong>：負責理解和執行自然語言指令<br />
-- <strong>自我管理的文件系統</strong>：自動管理代理相關的文件和配置<br />
-- <strong>自我演練的代理定制模組</strong>：自動優化和調整代理配置</p>
+<p>AutoAgent 採用零代碼架構，通過自然語言理解來生成和配置代理系統。核心組件包括：</p>
+<ul>
+<li><strong>代理系統實用程序</strong>：提供代理管理的基本功能</li>
+<li><strong>LLM 驅動的可操作引擎</strong>：負責理解和執行自然語言指令</li>
+<li><strong>自我管理的文件系統</strong>：自動管理代理相關的文件和配置</li>
+<li><strong>自我演練的代理定制模組</strong>：自動優化和調整代理配置</li>
+</ul>
 <h3>適用場景</h3>
 <ul>
 <li>快速原型開發</li>
@@ -170,11 +180,13 @@
 <li><strong>代理路由</strong>：實現高效的任務與代理匹配</li>
 </ul>
 <h3>技術架構</h3>
-<p>InfiAgent 採用金字塔架構模式，通過分層代理系統來處理複雜任務：<br />
-- <strong>代理即工具</strong>：自動將複雜代理分解為分層的多代理系統<br />
-- <strong>雙重審核</strong>：確保任務完成的質量和穩定性<br />
-- <strong>代理路由</strong>：實現高效的任務與代理匹配<br />
-- <strong>自我進化</strong>：根據新任務、性能不佳或優化機會自動重構代理 DAG</p>
+<p>InfiAgent 採用金字塔架構模式，通過分層代理系統來處理複雜任務：</p>
+<ul>
+<li><strong>代理即工具</strong>：自動將複雜代理分解為分層的多代理系統</li>
+<li><strong>雙重審核</strong>：確保任務完成的質量和穩定性</li>
+<li><strong>代理路由</strong>：實現高效的任務與代理匹配</li>
+<li><strong>自我進化</strong>：根據新任務、性能不佳或優化機會自動重構代理 DAG</li>
+</ul>
 <h3>適用場景</h3>
 <ul>
 <li>需要應對無限場景的複雜任務</li>
@@ -200,10 +212,12 @@
 <li><strong>高度自動化</strong>：減少人工干預，提供高度自動化的代理管理和配置能力</li>
 </ul>
 <h3>技術架構</h3>
-<p>MAS² 採用「生成器-執行器-修正器」三代理團隊架構：<br />
-- <strong>生成器</strong>：負責根據任務需求生成代理系統<br />
-- <strong>執行器</strong>：負責執行任務<br />
-- <strong>修正器</strong>：負責根據執行結果進行修正和優化</p>
+<p>MAS² 採用「生成器-執行器-修正器」三代理團隊架構：</p>
+<ul>
+<li><strong>生成器</strong>：負責根據任務需求生成代理系統</li>
+<li><strong>執行器</strong>：負責執行任務</li>
+<li><strong>修正器</strong>：負責根據執行結果進行修正和優化</li>
+</ul>
 <p>通過協作樹優化訓練和專門化這些元代理，MAS² 在複雜場景中表現出色，如深度研究和代碼生成。</p>
 <h3>適用場景</h3>
 <ul>
@@ -267,16 +281,20 @@
 </ul>
 <h3>按開發方式分類</h3>
 <h4>1. 代碼框架</h4>
-<p>需要編寫代碼配置：<br />
-- <strong>AutoGen</strong><br />
-- <strong>LangGraph</strong><br />
-- <strong>CrewAI</strong><br />
-- <strong>AgentMesh</strong><br />
-- <strong>InfiAgent</strong><br />
-- <strong>MAS²</strong></p>
+<p>需要編寫代碼配置：</p>
+<ul>
+<li><strong>AutoGen</strong></li>
+<li><strong>LangGraph</strong></li>
+<li><strong>CrewAI</strong></li>
+<li><strong>AgentMesh</strong></li>
+<li><strong>InfiAgent</strong></li>
+<li><strong>MAS²</strong></li>
+</ul>
 <h4>2. 零代碼框架</h4>
-<p>僅需自然語言：<br />
-- <strong>AutoAgent</strong></p>
+<p>僅需自然語言：</p>
+<ul>
+<li><strong>AutoAgent</strong></li>
+</ul>
 <h2>綜合比較表</h2>
 <table>
 <thead>
@@ -289,8 +307,7 @@
 <th>適用場景</th>
 </tr>
 </thead>
-<tbody>
-<tr>
+<tbody><tr>
 <td>AutoGen</td>
 <td>代碼</td>
 <td>對話式</td>
@@ -346,64 +363,85 @@
 <td>較高</td>
 <td>深度研究、代碼生成</td>
 </tr>
-</tbody>
-</table>
+</tbody></table>
 <h2>選擇建議</h2>
 <h3>根據需求選擇</h3>
 <h4>需要高度定制化</h4>
-<p><strong>推薦：LangGraph</strong><br />
-- 提供最大的靈活性和定制化能力<br />
-- 支持複雜的動態工作流<br />
-- 適合有豐富開發經驗的團隊</p>
+<p><strong>推薦：LangGraph</strong></p>
+<ul>
+<li>提供最大的靈活性和定制化能力</li>
+<li>支持複雜的動態工作流</li>
+<li>適合有豐富開發經驗的團隊</li>
+</ul>
 <h4>需要快速原型開發</h4>
-<p><strong>推薦：AutoAgent 或 CrewAI</strong><br />
-- AutoAgent：零代碼，非技術人員也能使用<br />
-- CrewAI：直觀易用，主要依賴提示工程</p>
+<p><strong>推薦：AutoAgent 或 CrewAI</strong></p>
+<ul>
+<li>AutoAgent：零代碼，非技術人員也能使用</li>
+<li>CrewAI：直觀易用，主要依賴提示工程</li>
+</ul>
 <h4>需要整合現有系統</h4>
-<p><strong>推薦：AgentMesh</strong><br />
-- 支持多種運行方式（CLI、Web、SDK、API）<br />
-- 易於集成到現有應用中<br />
-- 分層架構便於擴展</p>
+<p><strong>推薦：AgentMesh</strong></p>
+<ul>
+<li>支持多種運行方式（CLI、Web、SDK、API）</li>
+<li>易於集成到現有應用中</li>
+<li>分層架構便於擴展</li>
+</ul>
 <h4>需要處理複雜任務</h4>
-<p><strong>推薦：InfiAgent 或 MAS²</strong><br />
-- InfiAgent：自我進化能力強，適合應對無限場景<br />
-- MAS²：自適應能力強，適合深度研究和代碼生成</p>
+<p><strong>推薦：InfiAgent 或 MAS²</strong></p>
+<ul>
+<li>InfiAgent：自我進化能力強，適合應對無限場景</li>
+<li>MAS²：自適應能力強，適合深度研究和代碼生成</li>
+</ul>
 <h4>需要多方對話</h4>
-<p><strong>推薦：AutoGen</strong><br />
-- 專門針對對話式協作設計<br />
-- 支持多方對話和協作<br />
-- 靈活的代理定義</p>
+<p><strong>推薦：AutoGen</strong></p>
+<ul>
+<li>專門針對對話式協作設計</li>
+<li>支持多方對話和協作</li>
+<li>靈活的代理定義</li>
+</ul>
 <h3>根據技術背景選擇</h3>
 <h4>非技術人員</h4>
-<p><strong>推薦：AutoAgent</strong><br />
-- 零代碼框架<br />
-- 僅需自然語言<br />
-- 快速上手</p>
+<p><strong>推薦：AutoAgent</strong></p>
+<ul>
+<li>零代碼框架</li>
+<li>僅需自然語言</li>
+<li>快速上手</li>
+</ul>
 <h4>初級開發者</h4>
-<p><strong>推薦：CrewAI</strong><br />
-- 直觀易用<br />
-- 主要依賴提示工程<br />
-- 學習曲線平緩</p>
+<p><strong>推薦：CrewAI</strong></p>
+<ul>
+<li>直觀易用</li>
+<li>主要依賴提示工程</li>
+<li>學習曲線平緩</li>
+</ul>
 <h4>中級開發者</h4>
-<p><strong>推薦：AutoGen 或 AgentMesh</strong><br />
-- 提供良好的文檔和社區支持<br />
-- 平衡了功能性和易用性</p>
+<p><strong>推薦：AutoGen 或 AgentMesh</strong></p>
+<ul>
+<li>提供良好的文檔和社區支持</li>
+<li>平衡了功能性和易用性</li>
+</ul>
 <h4>高級開發者</h4>
-<p><strong>推薦：LangGraph、InfiAgent 或 MAS²</strong><br />
-- 提供最大的靈活性和定制化能力<br />
-- 適合構建複雜的企業級應用</p>
+<p><strong>推薦：LangGraph、InfiAgent 或 MAS²</strong></p>
+<ul>
+<li>提供最大的靈活性和定制化能力</li>
+<li>適合構建複雜的企業級應用</li>
+</ul>
 <h2>結論</h2>
-<p>選擇合適的多智能體框架需要綜合考慮多個因素，包括：<br />
-- <strong>應用場景</strong>：不同的場景需要不同的架構模式<br />
-- <strong>技術背景</strong>：團隊的技術水平影響框架的選擇<br />
-- <strong>開發資源</strong>：時間和人力資源的投入<br />
-- <strong>擴展需求</strong>：未來是否需要擴展和維護</p>
-<p>沒有一個框架能夠適用於所有場景，關鍵是要根據實際需求做出最佳選擇。建議在選擇框架時：<br />
-1. 明確應用場景和需求<br />
-2. 評估團隊的技術背景<br />
-3. 參考官方文檔和社區資源<br />
-4. 進行小規模的 POC（概念驗證）<br />
-5. 根據實際使用情況進行調整</p>
+<p>選擇合適的多智能體框架需要綜合考慮多個因素，包括：</p>
+<ul>
+<li><strong>應用場景</strong>：不同的場景需要不同的架構模式</li>
+<li><strong>技術背景</strong>：團隊的技術水平影響框架的選擇</li>
+<li><strong>開發資源</strong>：時間和人力資源的投入</li>
+<li><strong>擴展需求</strong>：未來是否需要擴展和維護</li>
+</ul>
+<p>沒有一個框架能夠適用於所有場景，關鍵是要根據實際需求做出最佳選擇。建議在選擇框架時：</p>
+<ol>
+<li>明確應用場景和需求</li>
+<li>評估團隊的技術背景</li>
+<li>參考官方文檔和社區資源</li>
+<li>進行小規模的 POC（概念驗證）</li>
+<li>根據實際使用情況進行調整</li>
+</ol>
 <p>希望本文能夠幫助開發者更好地理解各種多智能體框架的特點和適用場景，做出明智的選擇。</p>
 <h2>參考資料總覽</h2>
 <h3>官方文檔與資源</h3>
