完善文章：新增 Excel 數據轉換的實際案例
- 新增實際案例章節，說明傳統產業 Excel 數據轉換的困境
- 對比傳統方式與 AI 時代的差異
- 從以月為單位估算到以天為單位估算的效率提升
- 包含中英文版本

--- a/content/processed/ai-development-efficiency-revolution.en.html
+++ b/content/processed/ai-development-efficiency-revolution.en.html
@@ -52,6 +52,36 @@
 
 <p>Every traditional industry has its unique business processes. These processes may seem "strange" or not conform to standard practices, but they are the core of how that industry operates. AI tools make digitalization of these special processes feasible without needing to change business logic to adapt to standard software.</p>
 
+<h2>Real-World Case: The Excel Data Conversion Dilemma and Breakthrough</h2>
+
+<p>Take a typical example: traditional industries' over-reliance on "Excel." Everything gets organized into Excel, making it impossible to directly import into standard inventory management systems, forcing them to pay high costs for customization.</p>
+
+<p>Indeed, whenever you receive an Excel file that looks neat but is actually full of exceptions, it's a headache. Clarifying all the exceptions in that Excel file is a lengthy process. Because when you've painstakingly written a conversion logic and see the current Excel converting perfectly, you might be thrown back into the abyss by exceptions in another table from a "different month." What's worse, the client can't even explain clearly—they don't know what to tell you, after all, it's a traditional industry.</p>
+
+<h3>The Dilemma of Traditional Approaches</h3>
+
+<p>In the pre-AI era, developers working on Excel data conversion projects faced challenges including:</p>
+
+<ul>
+<li><strong>Endless exceptions</strong>: Each month's table might have different formats, column orders, or special markers, requiring individual handling.</li>
+<li><strong>High communication costs</strong>: Clients often can't clearly explain all exceptions, requiring developers to repeatedly test, discover issues, and ask clients, creating a time-consuming cycle.</li>
+<li><strong>Difficult verification</strong>: Even after writing conversion logic, significant time is needed to verify that each exception is correctly handled.</li>
+<li><strong>Unreliable time estimates</strong>: Building a system that works with real "legacy" data from order, income, and expense tables, you could only estimate in months.</li>
+</ul>
+
+<h3>The AI Era Breakthrough</h3>
+
+<p>But now, the situation is completely different:</p>
+
+<ul>
+<li><strong>After clarifying logic, AI does the implementation</strong>: You only need to clarify the logic and exceptions; AI generates the specific conversion code, greatly shortening implementation time.</li>
+<li><strong>Minimal cost verification</strong>: You can verify AI output at minimal cost. You can even use IDEs like Cursor to automatically create logs at key points during generation, making it easy to see how far off AI might be.</li>
+<li><strong>Rapid iteration</strong>: Layout changes, 3 minutes; adding explanatory text, 1 minute. These are tasks that even the most skilled senior engineers had to spend considerable time on, now they can be completed quickly.</li>
+<li><strong>Dramatically shortened time estimates</strong>: Building a system that works with real "legacy" data from order, income, and expense tables can now be estimated in days, not months.</li>
+</ul>
+
+<p>This case clearly demonstrates how AI tools change the cost structure of digitalization in traditional industries. Data conversion work that previously required massive time and resources can now be completed at minimal cost while maintaining high quality.</p>
+
 <h2>Cognitive Gaps and the Chaotic Era</h2>
 
 <p>However, we are in a "chaotic era." Although everyone knows AI can help with many things, there's inconsistent understanding about how detailed this help can be:</p>
