--- a/content/processed/ai-development-efficiency-revolution.html
+++ b/content/processed/ai-development-efficiency-revolution.html
@@ -52,6 +52,36 @@
 
 <p>每個傳統產業都有其獨特的業務流程，這些流程可能看起來「奇怪」或不符合標準做法，但卻是該產業運作的核心。AI 工具讓這些特殊流程的數位化變得可行，不需要為了適應標準軟體而改變業務邏輯。</p>
 
+<h2>實際案例：Excel 數據轉換的困境與突破</h2>
+
+<p>舉個最典型的例子：傳統產業不得不濫用的「Excel」。什麼資料都往 Excel 整理，導致公版進銷存系統無法直接導入，面臨客製又得付出大量成本。</p>
+
+<p>的確，每當拿到看似整齊、實則一堆例外的 Excel，也是一個頭兩個大。釐清這份 Excel 到底有多少例外，是一份冗長的過程。因為當你辛苦寫完一套轉換邏輯時，看著眼前的 Excel 可以完美轉換，你可能會被另一個「不同月份」的表中的例外，再次打入深淵。更麻煩的是，客戶根本也講不清楚，他不知道到底要跟你講什麼，畢竟是傳產。</p>
+
+<h3>傳統方式的困境</h3>
+
+<p>在沒有 AI 工具的時代，處理這種 Excel 數據轉換的專案，開發者面臨的挑戰包括：</p>
+
+<ul>
+<li><strong>例外情況層出不窮</strong>：每個月份的表格可能有不同的格式、欄位順序、或是特殊標記，需要逐一處理。</li>
+<li><strong>溝通成本高昂</strong>：客戶往往無法清楚說明所有例外情況，開發者需要反覆測試、發現問題、再詢問客戶，形成耗時的循環。</li>
+<li><strong>驗證困難</strong>：即使寫完轉換邏輯，也需要大量時間驗證每個例外情況是否都被正確處理。</li>
+<li><strong>時間估算不準</strong>：從訂單、收、支等數張表要做出一個客戶用真實「老舊」資料可以使用的系統，你只敢以月為單位估計。</li>
+</ul>
+
+<h3>AI 時代的突破</h3>
+
+<p>但如今，情況完全不同了：</p>
+
+<ul>
+<li><strong>釐清邏輯後，實作者是 AI</strong>：你只需要釐清邏輯和例外情況，具體的轉換代碼由 AI 生成，大幅縮短實作時間。</li>
+<li><strong>極小成本驗證</strong>：你可以用極小成本驗證 AI 的產出是否符合預期。甚至可以使用像 Cursor 這樣的 IDE，在產製過程中，在關鍵節點自動建立 LOG，方便你釐清 AI 到底有多歪。</li>
+<li><strong>快速迭代</strong>：改排版，3 分鐘；那邊需要多加說明文字，1 分鐘。這些都是高階工程師再厲害都得付出許多時間完成的工作，現在可以快速完成。</li>
+<li><strong>時間估算大幅縮短</strong>：從訂單、收、支等數張表要做出一個客戶用真實「老舊」資料可以使用的系統，現在可以以天為單位估計，而不是以月為單位。</li>
+</ul>
+
+<p>這個案例清楚地展示了 AI 工具如何改變傳統產業數位化的成本結構。過去需要大量時間和資源的數據轉換工作，現在可以在保持高品質的前提下，以極小成本完成。</p>
+
 <h2>認知差距與混沌時代</h2>
 
 <p>然而，我們正處於一個「混沌的時代」。雖然大家都知道 AI 可以幫忙很多事情，但具體可以幫忙到多細的程度，大家的認知並不一致：</p>
